--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>mac and cheese</h1>
-        <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
+        <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
     </body>
 </html>
