Replace the contents in index to mac-and-cheese.html

--- a/index.html
+++ b/index.html
@@ -7,35 +7,11 @@
 
     <body>
         <h1> Odin Recipes</h1>
-
+        <a href=""> </a>
+        <a href=""> </a>
         <a href="recipes/mac-and-cheese.html" target="_self" rel="noopener noreferrer" >Mac and Cheese</a>
 
         <br>
 
-        <img src= "./MacAndCheese.png" width="400px" height="310px">
-
-        <h2> Description </h2>
-
-        <p>This homemade mac and cheese is topped with buttered bread crumbs for pure comfort food. 
-            It's easy to make the cheese sauce from scratch, starting with a roux and adding milk, Cheddar, 
-            and Parmesan to make a rich, decadent sauce that coats every nook and cranny of the noodles. </p>
-        
-        <h3> Ingredients </h3>
-          <ul>
-            <li> Macaroni </li>
-            <li> Butter and Flour </li>
-            <li> Milk </li>
-            <li> Cheese </li>
-            <li> Seasonings </li>
-            <li> Bread Crumbs </li>
-          </ul>
-
-         <h3> Steps</h3>
-            <ol>
-                <li> Boil the noodles, drain, and transfer to a prepared baking dish. </li>
-                <li> Make the cheese sauce, pour the sauce over the noodles, and stir. </li>
-                <li> Make the topping, spread it over macaroni and cheese, and sprinkle with paprika. </li>
-                <li> Bake the mac and cheese until the topping is golden brown. </li>
-            </ol> 
     </body>
 </html>
