Complete Iteration 4, Creating 2 new recipe pages

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <body>
         <h1> Odin Recipes</h1>
-        <a href=""> </a>
-        <a href=""> </a>
-        <a href="recipes/mac-and-cheese.html" target="_self" rel="noopener noreferrer" >Mac and Cheese</a>
-
+        <uL>
+        <li><a href="recipes/Fried-Chicken.html" target="_self" rel="noopener noreferrer"> Fried Chicken </a></li>
+        <li><a href="recipes/ChickenNachos.html" target="_self" rel="noopener noreferrer"> Chicken Nachos</a></li>
+        <li><a href="recipes/mac-and-cheese.html" target="_self" rel="noopener noreferrer" >Mac and Cheese</a></li>
+        </uL>
 
     </body>
 </html>
