--- a/recipes/ChickenNachos.html
+++ b/recipes/ChickenNachos.html
@@ -6,9 +6,41 @@
         <title> Chicken Nachos </title>
 
     </head>
+
     <body>
+        <h1> Chicken Nachos</h1>
+        <a href="../index.html" target="_self" rel="noreferrer, noopener"> Home </a>
+
+        <br> 
+
+        <img src="../Chicken Nachos.png" width="400px" height=""310px>
+
+        <h2> Description</h2>
         
+        <p>These chicken nachos are easy to prepare, delicious, and sure to be a big hit! Hearty enough for a meal. 
+           The key flavors are in the chicken topping which also makes a great filling for tacos and quesadillas. 
+           I recommend serving with sour cream and guacamole but you can be as creative as you like!</p>
+        
+        <h3> Ingredients </h3>
+          <uL>
+            <li> Canola Oil </li>
+            <li> Green Onions (sliced) </li>
+            <li> Garlic </li>
+            <li> Chicken Breast </li>
+            <li> Salt and Pepper </li>
+            <li> Salsa </li>
+            <li> Tortilla Chips </li>
+            <li> Shredded Cheddar/Monterey Jack Cheese Blend </li>
+            <li> Tomato (diced) </li>
+          </uL>
 
-
+          <h3> Steps </h3>
+          <ol> 
+            <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C).</li>
+            <li>Heat oil in a deep 12-inch skillet over medium heat. Add white parts of the green onions and garlic; cook and stir until onions are just tender.</li>
+            <li>Mix in shredded chicken and season to taste with salt and pepper; toss until well coated. Stir in salsa.</li>
+            <li>Arrange tortilla chips on a large baking sheet. Spoon chicken mixture over tortilla chips; top with shredded cheese and tomato. </li>
+            <li>Bake in the preheated oven until cheese has melted, about 10 minutes. Remove from heat and sprinkle with green onion tops before serving. </li>
+          </ol>
     </body>
 </html>
