--- a/recipes/Fried-Chicken.html
+++ b/recipes/Fried-Chicken.html
@@ -7,8 +7,35 @@
 
     </head>
     <body>
-        
+        <h1> Fried Chicken </h1>
+        <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
 
+        <br>
 
+        <img src = "../Fried Chicken.png" width="400px" height="310px">
+
+        <h2> Description </h2>
+        <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers.
+           It does not matter if the measurements aren't perfect, just wing it!</p>
+
+        <h3> Ingredients </h3>
+          <ul> 
+            <li> Saltine Crackers </li>
+            <li> All purpose Flour </li>
+            <li> Dry Potato Flakes </li>
+            <li> Seasoned Salt </li>
+            <li> Ground Black Pepper </li>
+            <li> Egg </li>
+            <li> Skinless, Boneless Breast </li>
+            <li> Vegetable Oil For Frying </li>
+          </ul>
+
+        <h3> Steps </h3>
+          <ol> 
+            <li> Place crackers in a large resealable plastic bag; seal bag and crush crackers with a rolling pin until they are coarse crumbs. Add the flour, potato flakes, seasoned salt, and pepper and mix well.</li>
+            <li> Beat egg in a shallow dish or bowl. One by one, dredge chicken pieces in egg, then place in bag with crumb mixture. Seal bag and shake to coat. </li>
+            <li> Heat oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C). </li>
+            <li> Fry chicken, turning frequently, until golden brown and juices run clear, 15 to 20 minutes. </li>
+          </ol>
     </body>
 </html>
