--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head> 
         <meta charset="UTF-8">
-        <title>mac and cheese</title>
+        <title>Mac And Cheese</title>
     </head>
 
     <body>
-        <h1>mac and cheese</h1>
+        <h1>Mac and Cheese</h1>
         <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
         
         <br>
@@ -29,7 +29,7 @@
             <li> Bread Crumbs </li>
           </ul>
 
-         <h3> Steps</h3>
+         <h3> Steps </h3>
             <ol>
                 <li> Boil the noodles, drain, and transfer to a prepared baking dish. </li>
                 <li> Make the cheese sauce, pour the sauce over the noodles, and stir. </li>
