Add CSS to Index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Recipes </title>
+        <link href="./recipes/styles.css" rel="stylesheet">
     </head>
 
     <body>
@@ -11,6 +12,7 @@
         <li><a href="recipes/Fried-Chicken.html" target="_self" rel="noopener noreferrer"> Fried Chicken </a></li>
         <li><a href="recipes/ChickenNachos.html" target="_self" rel="noopener noreferrer"> Chicken Nachos</a></li>
         <li><a href="recipes/mac-and-cheese.html" target="_self" rel="noopener noreferrer" >Mac and Cheese</a></li>
+        
         </uL>
 
     </body>
