--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 
     <body>
         <h1> Odin Recipes</h1>
-        <uL>
+        <ul class="nav-list">
         <li><a href="recipes/Fried-Chicken.html" target="_self" rel="noopener noreferrer"> Fried Chicken </a></li>
         <li><a href="recipes/ChickenNachos.html" target="_self" rel="noopener noreferrer"> Chicken Nachos</a></li>
         <li><a href="recipes/mac-and-cheese.html" target="_self" rel="noopener noreferrer" >Mac and Cheese</a></li>
-        
-        </uL>
+        <li><a href="#"">Another dish</a></li>
+        <li><a href="#"">Another dish</a></li>
+        <li><a href="#"">Another dish</a></li>
+        <li><a href="#"">Another dish</a></li>
+
+        </ul>
 
     </body>
 </html>
