--- a/recipes/Fried-Chicken.html
+++ b/recipes/Fried-Chicken.html
@@ -4,14 +4,16 @@
         
         <meta charset="UTF-8">
         <title> Fried Chicken </title>
-
+        <link rel="stylesheet" href="../recipes/styles.css">
     </head>
     <body>
+        <div class="header">
         <h1> Fried Chicken </h1>
         <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
-
+        </div>
         <br>
-
+        
+        <div class="content">
         <img src = "../Fried Chicken.png" width="400px" height="310px">
 
         <h2> Description </h2>
@@ -37,5 +39,6 @@
             <li> Heat oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C). </li>
             <li> Fry chicken, turning frequently, until golden brown and juices run clear, 15 to 20 minutes. </li>
           </ol>
+         </div>
     </body>
 </html>
