Implement CSS on other Recipe pages

--- a/recipes/ChickenNachos.html
+++ b/recipes/ChickenNachos.html
@@ -4,13 +4,15 @@
         
         <meta charset="UTF-8">
         <title> Chicken Nachos </title>
+        <link rel="stylesheet" href="../recipes/styles.css">
 
     </head>
 
     <body>
+      <div class="header">
         <h1> Chicken Nachos</h1>
         <a href="../index.html" target="_self" rel="noreferrer, noopener"> Home </a>
-
+       </div>
         <br> 
 
         <img src="../Chicken Nachos.png" width="400px" height=""310px>
