--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -3,12 +3,15 @@
     <head> 
         <meta charset="UTF-8">
         <title>Mac And Cheese</title>
+        <link rel="stylesheet" href="../recipes/styles.css">
+
     </head>
 
     <body>
+        <div class="header">
         <h1>Mac and Cheese</h1>
         <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
-        
+        </div>
         <br>
 
         <img src= "../MacAndCheese.png" width="400px" height="310px">
