Create some layouts for the index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="header">
             <h1> Odin Recipes</h1>
         </div>
-
+        <div class="mainCont">
         <ul class="nav-list">
         <li><a href="recipes/Fried-Chicken.html" target="_self" rel="noopener noreferrer"> Fried Chicken </a></li>
         <li><a href="recipes/ChickenNachos.html" target="_self" rel="noopener noreferrer"> Chicken Nachos</a></li>
@@ -18,6 +18,11 @@
         <li><a href="#"">Another dish</a></li>
 
         </ul>
-
+            <h1>This is some text</h1>
+            <br>
+            <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod earum dolore iste harum molestias dicta excepturi suscipit nobis illo explicabo in sapiente dignissimos, officiis, sint corrupti quisquam repellat, magnam itaque.</p>
+            </div>
+        </div>
     </body>
 </html>
