Update the Body to 3 sections

--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
         <li><a href="#"">Another dish</a></li>
 
         </ul>
-            <h1>This is some text</h1>
-            <br>
+
             <div class="card">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod earum dolore iste harum molestias dicta excepturi suscipit nobis illo explicabo in sapiente dignissimos, officiis, sint corrupti quisquam repellat, magnam itaque.</p>
+                <h1>This is some text</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod earum dolore iste harum molestias dicta excepturi suscipit nobis illo explicabo in sapiente dignissimos, officiis, sint corrupti quisquam repellat, magnam itaque.</p>
             </div>
+
+        <div class="right-link">
+            <p>Some text blah blah</p>
+
+
         </div>
+    </div>
+    <div class="footer">
+
+        
+    </div>
     </body>
 </html>
